# SeisoModelRouter

./: .gitignore  LICENSE  README.md  pyproject.toml  start-router-vllm
deploy/: README.md
deploy/model-router/: Dockerfile  README.md  docker-compose.local.vllm.yml  docker-compose.local.yml  docker-compose.prod.yml  prometheus.yml
deploy/model-router/config/: litellm.local.vllm.yaml  llama-swap.local.llamacpp.yaml  llama-swap.local.vllm.yaml  llama-swap.prod.yaml  router.local.vllm.yaml  router.local.yaml  router.prod.yaml  specialists.cloud.example.json  specialists.local.llamacpp.json  specialists.local.vllm.json  specialists.prod.vllm.json
deploy/model-router/scripts/: sleep_hook.sh  wake_hook.sh
docs/: cli.md
scripts/: start-router-vllm.sh
seiso/: __init__.py
seiso/model_router/: __init__.py  app.py  backend_lifecycle.py  catalog.py  classifier.py  config.py  fallback.py  litellm_callback.py  litellm_gateway.py  main.py  middleware.py  monitoring.py  nemotron.py  policy.py  reward.py
seiso/rl_quant/: __init__.py  bootstrap.py
seiso_cli/: __init__.py  console.py  main.py
seiso_cli/commands/: __init__.py  router.py
tests/: test_litellm_gateway.py  test_model_router.py  test_model_router_reward.py  test_nemotron_orchestrator.py
